# nuernberg-kino-bot

./: ARCHITECTURE.md  DEVELOPMENT.md  PROJECT_CONTEXT.md  README.md  REVIEW.md  pyproject.toml  vercel.json
.claude/: project-knowledge.md
.github/workflows/: monitor.yml
api/: webhook.py
src/: __init__.py  base_scraper.py  bot_commands.py  check_meisengeige.py  filmhaus_scraper.py  main.py  models.py  notifier.py  scraper.py  source_registry.py  storage.py  subscribers.py
